src/snapshots/lis_lang__parser__tests__prog_only_semis.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "expression",
        found: Some(
            Token {
                sigil: Semi,
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
            },
        ),
    },
)
