src/snapshots/lis_lang__parser__tests__stmt_func_decl.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 23,
            line: 0,
            col: 23,
        },
        node: FuncDecl {
            keyword: Token {
                sigil: Keyword(
                    Fn,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
            },
            name: "add",
            param_paren_l: Token {
                sigil: ParenL,
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
            },
            params: [
                "a",
                "b",
            ],
            param_paren_r: Token {
                sigil: ParenR,
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
            },
            body: Span {
                range: Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                }..Pos {
                    offset: 23,
                    line: 0,
                    col: 23,
                },
                node: Block {
                    brace_l: Token {
                        sigil: CurlyL,
                        range: Pos {
                            offset: 13,
                            line: 0,
                            col: 13,
                        }..Pos {
                            offset: 14,
                            line: 0,
                            col: 14,
                        },
                    },
                    stmts: [
                        Span {
                            range: Pos {
                                offset: 15,
                                line: 0,
                                col: 15,
                            }..Pos {
                                offset: 21,
                                line: 0,
                                col: 21,
                            },
                            node: Return {
                                keyword: Token {
                                    sigil: Keyword(
                                        Return,
                                    ),
                                    range: Pos {
                                        offset: 15,
                                        line: 0,
                                        col: 15,
                                    }..Pos {
                                        offset: 21,
                                        line: 0,
                                        col: 21,
                                    },
                                },
                                expr: None,
                            },
                        },
                    ],
                    brace_r: Token {
                        sigil: CurlyR,
                        range: Pos {
                            offset: 22,
                            line: 0,
                            col: 22,
                        }..Pos {
                            offset: 23,
                            line: 0,
                            col: 23,
                        },
                    },
                },
            },
        },
    },
)
