src/snapshots/lis_lang__parser__tests__stmt_func_decl_default_arg.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 26,
            line: 0,
            col: 26,
        },
        node: FuncDecl {
            keyword: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
                node: (),
            },
            name: Span {
                range: Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
                node: "foo",
            },
            param_paren_l: Span {
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: (),
            },
            params: [
                Span {
                    range: Pos {
                        offset: 7,
                        line: 0,
                        col: 7,
                    }..Pos {
                        offset: 12,
                        line: 0,
                        col: 12,
                    },
                    node: Default {
                        pat: Span {
                            range: Pos {
                                offset: 7,
                                line: 0,
                                col: 7,
                            }..Pos {
                                offset: 8,
                                line: 0,
                                col: 8,
                            },
                            node: Ident {
                                name: "a",
                            },
                        },
                        eq_tok: Span {
                            range: Pos {
                                offset: 9,
                                line: 0,
                                col: 9,
                            }..Pos {
                                offset: 10,
                                line: 0,
                                col: 10,
                            },
                            node: (),
                        },
                        default: Span {
                            range: Pos {
                                offset: 11,
                                line: 0,
                                col: 11,
                            }..Pos {
                                offset: 12,
                                line: 0,
                                col: 12,
                            },
                            node: Num {
                                val: 1.0,
                            },
                        },
                    },
                },
                Span {
                    range: Pos {
                        offset: 14,
                        line: 0,
                        col: 14,
                    }..Pos {
                        offset: 22,
                        line: 0,
                        col: 22,
                    },
                    node: Default {
                        pat: Span {
                            range: Pos {
                                offset: 14,
                                line: 0,
                                col: 14,
                            }..Pos {
                                offset: 15,
                                line: 0,
                                col: 15,
                            },
                            node: Ident {
                                name: "b",
                            },
                        },
                        eq_tok: Span {
                            range: Pos {
                                offset: 16,
                                line: 0,
                                col: 16,
                            }..Pos {
                                offset: 17,
                                line: 0,
                                col: 17,
                            },
                            node: (),
                        },
                        default: Span {
                            range: Pos {
                                offset: 18,
                                line: 0,
                                col: 18,
                            }..Pos {
                                offset: 22,
                                line: 0,
                                col: 22,
                            },
                            node: Bool {
                                val: true,
                            },
                        },
                    },
                },
            ],
            param_paren_r: Span {
                range: Pos {
                    offset: 22,
                    line: 0,
                    col: 22,
                }..Pos {
                    offset: 23,
                    line: 0,
                    col: 23,
                },
                node: (),
            },
            body: Span {
                range: Pos {
                    offset: 24,
                    line: 0,
                    col: 24,
                }..Pos {
                    offset: 26,
                    line: 0,
                    col: 26,
                },
                node: Block {
                    brace_l: Span {
                        range: Pos {
                            offset: 24,
                            line: 0,
                            col: 24,
                        }..Pos {
                            offset: 25,
                            line: 0,
                            col: 25,
                        },
                        node: (),
                    },
                    stmts: [],
                    brace_r: Span {
                        range: Pos {
                            offset: 25,
                            line: 0,
                            col: 25,
                        }..Pos {
                            offset: 26,
                            line: 0,
                            col: 26,
                        },
                        node: (),
                    },
                },
            },
        },
    },
)
