src/snapshots/lis_lang__parser__tests__stmt_func_decl_empty.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 17,
            line: 0,
            col: 17,
        },
        node: FuncDecl {
            keyword: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
                node: (),
            },
            name: Span {
                range: Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                }..Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                },
                node: "sayHello",
            },
            param_paren_l: Span {
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
                node: (),
            },
            params: [],
            param_paren_r: Span {
                range: Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                }..Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                },
                node: (),
            },
            body: Span {
                range: Pos {
                    offset: 14,
                    line: 0,
                    col: 14,
                }..Pos {
                    offset: 17,
                    line: 0,
                    col: 17,
                },
                node: Block {
                    brace_l: Span {
                        range: Pos {
                            offset: 14,
                            line: 0,
                            col: 14,
                        }..Pos {
                            offset: 15,
                            line: 0,
                            col: 15,
                        },
                        node: (),
                    },
                    stmts: [],
                    brace_r: Span {
                        range: Pos {
                            offset: 16,
                            line: 0,
                            col: 16,
                        }..Pos {
                            offset: 17,
                            line: 0,
                            col: 17,
                        },
                        node: (),
                    },
                },
            },
        },
    },
)
