src/snapshots/lis_lang__parser__tests__stmt_func_decl_missing_body.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "opening brace of function body",
        found: None,
    },
)
