src/snapshots/lis_lang__parser__tests__stmt_func_decl_missing_brace.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "semicolon or closing brace of block statement",
        found: None,
    },
)
