src/snapshots/lis_lang__parser__tests__stmt_func_decl_missing_name.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "function name identifier",
        found: Some(
            Span {
                range: Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                }..Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                },
                node: ParenL,
            },
        ),
    },
)
