src/snapshots/lis_lang__parser__tests__stmt_func_decl_missing_params.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "opening parenthesis of function parameters",
        found: Some(
            Span {
                range: Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                }..Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                },
                node: CurlyL,
            },
        ),
    },
)
