src/snapshots/lis_lang__parser__tests__stmt_func_decl_pat_obj_rename_default.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 19,
            line: 0,
            col: 19,
        },
        node: FuncDecl {
            keyword: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
                node: (),
            },
            name: Span {
                range: Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
                node: "foo",
            },
            param_paren_l: Span {
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: (),
            },
            params: [
                Span {
                    range: Pos {
                        offset: 7,
                        line: 0,
                        col: 7,
                    }..Pos {
                        offset: 15,
                        line: 0,
                        col: 15,
                    },
                    node: Obj {
                        brace_l: Span {
                            range: Pos {
                                offset: 7,
                                line: 0,
                                col: 7,
                            }..Pos {
                                offset: 8,
                                line: 0,
                                col: 8,
                            },
                            node: (),
                        },
                        props: [
                            (
                                Span {
                                    range: Pos {
                                        offset: 8,
                                        line: 0,
                                        col: 8,
                                    }..Pos {
                                        offset: 9,
                                        line: 0,
                                        col: 9,
                                    },
                                    node: "x",
                                },
                                Span {
                                    range: Pos {
                                        offset: 11,
                                        line: 0,
                                        col: 11,
                                    }..Pos {
                                        offset: 14,
                                        line: 0,
                                        col: 14,
                                    },
                                    node: Default {
                                        pat: Span {
                                            range: Pos {
                                                offset: 11,
                                                line: 0,
                                                col: 11,
                                            }..Pos {
                                                offset: 12,
                                                line: 0,
                                                col: 12,
                                            },
                                            node: Ident {
                                                name: "y",
                                            },
                                        },
                                        eq_tok: Span {
                                            range: Pos {
                                                offset: 12,
                                                line: 0,
                                                col: 12,
                                            }..Pos {
                                                offset: 13,
                                                line: 0,
                                                col: 13,
                                            },
                                            node: (),
                                        },
                                        default: Span {
                                            range: Pos {
                                                offset: 13,
                                                line: 0,
                                                col: 13,
                                            }..Pos {
                                                offset: 14,
                                                line: 0,
                                                col: 14,
                                            },
                                            node: Num {
                                                val: 1.0,
                                            },
                                        },
                                    },
                                },
                            ),
                        ],
                        brace_r: Span {
                            range: Pos {
                                offset: 14,
                                line: 0,
                                col: 14,
                            }..Pos {
                                offset: 15,
                                line: 0,
                                col: 15,
                            },
                            node: (),
                        },
                    },
                },
            ],
            param_paren_r: Span {
                range: Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                }..Pos {
                    offset: 16,
                    line: 0,
                    col: 16,
                },
                node: (),
            },
            body: Span {
                range: Pos {
                    offset: 17,
                    line: 0,
                    col: 17,
                }..Pos {
                    offset: 19,
                    line: 0,
                    col: 19,
                },
                node: Block {
                    brace_l: Span {
                        range: Pos {
                            offset: 17,
                            line: 0,
                            col: 17,
                        }..Pos {
                            offset: 18,
                            line: 0,
                            col: 18,
                        },
                        node: (),
                    },
                    stmts: [],
                    brace_r: Span {
                        range: Pos {
                            offset: 18,
                            line: 0,
                            col: 18,
                        }..Pos {
                            offset: 19,
                            line: 0,
                            col: 19,
                        },
                        node: (),
                    },
                },
            },
        },
    },
)
