src/snapshots/lis_lang__parser__tests__stmt_if.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "expression",
        found: Some(
            Span {
                range: Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                }..Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                },
                node: Keyword(
                    Print,
                ),
            },
        ),
    },
)
